Fix for BUG#7793 "mysqlbinlog produces incorrect queries": when printing SET @var in mysqlbinlog, backtick the collation (as BINARY is a reserved word)